package Airports.src;

public class CrewMember {
    private String forename;
    private String surname;
    private int staffNumber;

    public CrewMember(String forename, String surname, int staffNumber) {
        this.forename = forename;
        this.surname = surname;
        this.staffNumber = staffNumber;
    }

}
